--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -1,47 +1,47 @@
-name: Deploy MERN app to VDS
+name: Deploy MERN Application to VDS
 
 on:
   push:
     branches:
-      - main # или master, если у вас такая ветка
+      - main # Укажите ветку, с которой вы хотите деплоить
 
 jobs:
   deploy:
     runs-on: ubuntu-latest
-
     steps:
       - name: Checkout repository
         uses: actions/checkout@v2
 
-      - name: Set up SSH key for deployment
-        run: |
-          mkdir -p ~/.ssh
-          echo "$SSH_PRIVATE_KEY" > ~/.ssh/github
-          chmod 600 ~/.ssh/github
-          ssh-keyscan -H 62.109.13.68 >> ~/.ssh/known_hosts
+      - name: Set up SSH
+        uses: webfactory/ssh-agent@v0.5.3
+        with:
+          ssh-private-key: ${{ secrets.SSH_PRIVATE_KEY }}
 
-      - name: Install dependencies on VDS
-        run: |          
-            cd /home/roman
-            git pull origin main
-            cd server
-            npm install
-            cd ../client
-            npm install
-            cd ..
-          EOF
-
-      - name: Build frontend with Vite
+      - name: Deploy to Server
         run: |
-          ssh -i ~/.ssh/id_rsa nuxtvue@62.109.13.68 << 'EOF'
-            cd /home/roman/client
+          # Клонировать репозиторий на сервер
+          ssh -o StrictHostKeyChecking=no ${{ secrets.SERVER_USER }}@${{ secrets.SERVER_IP }} << 'EOF'
+            if [ ! -d "${{ secrets.SERVER_PATH }}" ]; then
+              git clone https://github.com/nuxtvue/roman.git ${{ secrets.SERVER_PATH }}
+            else
+              cd ${{ secrets.SERVER_PATH }} && git pull origin main
+            fi
+
+            cd ${{ secrets.SERVER_PATH }}
+
+            # Установка зависимостей
+            npm install
+
+            # Сборка фронтенда
+            cd client
+            npm install
             npm run build
-          EOF
 
-      - name: Restart backend and frontend services
-        run: |
-          ssh -i ~/.ssh/id_rsa nuxtvue@62.109.13.68 << 'EOF'
-            cd /home/roman
-            pm2 restart client  # если используете pm2 для Node.js
-            pm2 restart server # если хотите также использовать pm2 для Vite (если применимо)
+            # Запуск бэкенда с помощью PM2
+            cd ../server
+            npm install
+            pm2 restart all || pm2 start server.js --name "mern-app"
+
+            # Перезапуск nginx
+            sudo systemctl restart nginx
           EOF
