--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -28,7 +28,7 @@ jobs:
 
             # Установка зависимостей
             scp -i ~/.ssh/github -r ./* ${{ secrets.SERVER_USER }}@${{ secrets.SERVER_IP }}:/var/www/roman
-            mv -f /var/www/roman /home
+            cp -r -f /var/www/roman /home
             cd ${{ secrets.SERVER_PATH }}       
             # Сборка фронтенда
             cd client
