--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -29,7 +29,7 @@ jobs:
             # Установка зависимостей
             scp -i ~/.ssh/github -r ./* ${{ secrets.SERVER_USER }}@${{ secrets.SERVER_IP }}:/var/www/roman
             cp -fRv /var/www/roman/* /home
-            rm -rf /var/www/roman
+            # rm -rf /var/www/roman
             cd ${{ secrets.SERVER_PATH }}       
             # Сборка фронтенда
             cd client
