--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -27,8 +27,9 @@ jobs:
             
 
             # Установка зависимостей
-            scp -i ~/.ssh/github -r ./* ${{ secrets.SERVER_USER }}@${{ secrets.SERVER_IP }}:/var/www/roman
-            cp -fRv /var/www/roman/* /home
+            #scp -i ~/.ssh/github -r ./* ${{ secrets.SERVER_USER }}@${{ secrets.SERVER_IP }}:/var/www/roman
+            git clone https://github.com/nuxtvue/roman.git /var/www/roman
+            #cp -fRv /var/www/roman/* /home
             # rm -rf /var/www/roman
             cd ${{ secrets.SERVER_PATH }}       
             # Сборка фронтенда
