--- a/client/package.json
+++ b/client/package.json
@@ -10,6 +10,7 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@radix-ui/react-avatar": "^1.1.2",
     "@radix-ui/react-dialog": "^1.1.4",
     "@radix-ui/react-label": "^2.1.1",
     "@radix-ui/react-slot": "^1.1.1",
@@ -25,6 +26,8 @@
     "react-icons": "^5.4.0",
     "react-router-dom": "^7.1.1",
     "react-text-gradients": "^1.0.2",
+    "recoil": "^0.7.7",
+    "recoil-persist": "^5.1.0",
     "sonner": "^1.7.1",
     "tailwind-merge": "^2.6.0",
     "tailwindcss-animate": "^1.0.7"
