--- a/server/package.json
+++ b/server/package.json
@@ -24,6 +24,7 @@
     "jsonwebtoken": "^9.0.2",
     "mongoose": "^8.9.2",
     "multer": "^1.4.5-lts.1",
+    "natural": "^8.0.1",
     "nodemon": "^3.1.9",
     "sharp": "^0.33.5"
   }
